# mcp-template-python

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  README.zh.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
helm/mcp-template-python/: Chart.yaml  README.md  values.yaml
helm/mcp-template-python/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/mcp-template-python/templates/tests/: test-connection.yaml
src/mcp_template_python/: __about__.py  __main__.py  config.py  server.py
src/mcp_template_python/app/: __init__.py  math.py
src/mcp_template_python/config/: app.py  cors.py  mcp.py
src/mcp_template_python/lib/: better_mcp.py
src/mcp_template_python/models/: helpers.py
src/mcp_template_python/routers/: helpers.py
src/mcp_template_python/utils/: log.py
tests/: conftest.py  test_block.py
tools/: rename.py
