[project]
name = "mcp-template-python"
version = "0.1.4"
description = "MCP Template for Python Projects"
readme = "README.md"
authors = []
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "fastapi[standard]>=0.115.0",
    "mcp[cli]>=1.10.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.5.0",
    "rich-toolkit>=0.15.1",
]

[project.scripts]
mcp-template-python = "mcp_template_python.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mcp_template_python/__about__.py"

[tool.hatch.build.targets.sdist]
only-include = ["src/mcp_template_python"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "TID"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "blockbuster>=1.5.26",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.7",
    "ty>=0.0.15",
]
